custom-apps/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: plex-support
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: sonarr-config
                optional: false
          image: linuxserver/sonarr
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            exec:
              command:
                - /bin/sh
                - -c
                - curl "http://localhost:8989/sonarr/api/health?ApiKey=$(sed -ne '/ApiKey/{s/.*<ApiKey>\(.*\)<\/ApiKey>.*/\1/p;q;}' </config/config.xml)"
          name: sonarr
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - curl "http://localhost:8989/sonarr/api/system/status?ApiKey=$(sed -ne '/ApiKey/{s/.*<ApiKey>\(.*\)<\/ApiKey>.*/\1/p;q;}' </config/config.xml)"
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            limits:
              memory: 500Mi
              cpu: 500m
          volumeMounts:
            - mountPath: /tv
              name: smb-tv
            - mountPath: /downloads
              name: smb-downloads
            - mountPath: /config
              name: config
      restartPolicy: Always
      hostAliases:
        - ip: "192.168.1.212"
          hostnames:
          - "samba.finnhartshorn.com"
          - "irime.finnhartshorn.com"
          - "transmission.finnhartshorn.com"
      terminationGracePeriodSeconds: 30
      volumes:
        - persistentVolumeClaim:
            claimName: pvc-smb-sonarr-tv
          name: smb-tv
        - persistentVolumeClaim:
            claimName: pvc-smb-sonarr-downloads
          name: smb-downloads
        - persistentVolumeClaim:
            claimName: sonarr-pvc-config
          name: config
