custom-apps/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: plex-support
spec:
  selector:
    app: sonarr
  ports:
    - port: 8989
      protocol: TCP
      targetPort: 8989
  sessionAffinity: None
  type: ClusterIP
