custom-apps/sonarr/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingressroute
  namespace: plex-support
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "television-classic"
    hajimari.io/appName: "Sonarr"
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`sonarr.finnhartshorn.com`)
    kind: Rule
    services:
    - name: sonarr
      port: 8989
